# rl_chat

./: .env  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2340633ea300_message_seen_field_added.py  7fba1d7683c3_message_seen_field_changed.py  8c362bc4426b_message_model_relations_fixed_once_again.py  94be7bd1ea2b_added_tg_id_to_user_model.py  977cc903b072_message_main_field_renamed.py  a6e223006a11_user_model_created.py  c3ce17e20da9_message_model_created.py  ecc4097ed7e4_message_timestamp_default_value.py
apps/: __init__.py
apps/frontend/: routers.py
apps/messages/: crud.py  routers.py  schemas.py
apps/users/: crud.py  dependencies.py  routers.py  schemas.py  utils.py
database/: models.py
rl_chat/: dependencies.py  exceptions.py  main.py  settings.py  tasks.py
